# build-project-104

./: .env.example  .gitignore  BUG_REPORT_TEST_OUTPUT.md  CHUNKING_IMPACT_ANALYSIS.md  COMPREHENSIVE_FIX_PLAN.md  DATABASE_SETUP.md  DATASET_INGESTION_GUIDE.md  EXPECTED_COMPREHENSIVE_OUTPUT.json  EXPECTED_DIFFICULT_OUTPUT.json  EXPECTED_GROUNDTRUTH_OUTPUT.json  EXPECTED_OUTPUT.md  EXPECTED_QUICK_TEST.md  HUGGINGFACE_MODEL_TROUBLESHOOTING.md  NEO4J_SETUP.md  OPERATIONS_GUIDE.md  QUICK_TEST_GUIDE.md  README.md  SYSTEM_ARCHITECTURE.md  TESTING_GUIDE.md  TEST_ANALYSIS_SUMMARY.md  doc.md  docker-compose.yml  output_test_contract_01_labor_organization.json  output_test_contract_02_land_forestry.json  output_test_contract_03_pricing_services.json  output_test_contract_04_healthcare_water.json  output_test_contract_05_agriculture_irrigation.json  output_test_contract_06_urban_management.json  output_test_contract_07_environment.json  output_test_contract_1.json  output_test_contract_2.json  output_test_contract_3.json  output_test_contract_4.json  output_test_contract_groundtruth.json  plan_v1.md  pyproject.toml  sitecustomize.py  test_comprehensive_output.json  test_difficult_output.json  test_groundtruth_output.json  (+2 more)
apps/: __init__.py
apps/review_api/: __init__.py  main.py
apps/review_api/middleware/: __init__.py  timing.py
apps/review_api/routes/: __init__.py  chat.py  citations.py  dataset_ingestion.py  graph.py  ingest.py  (+1 more)
apps/web-app/: next.config.mjs  package-lock.json  package.json  start-dev.sh  tailwind.config.ts  tsconfig.json
database/: README.md  add_sample_data.py  check_docs.py  ingest_huggingface.py  ingest_real_data.py  ingest_relationships.py  init.sql  init_db.py  inspect_dataset.py  sync_neo4j.py  test_streaming.py  verify_db.py
docker/qdrant/: Dockerfile
monitoring/: alert_rules.yml  prometheus.yml
monitoring/grafana/: dashboard.json
scripts/: SCRIPTS_GUIDE.md  analyze_data_quality.py  analyze_groundtruth.py  analyze_search_performance.py  check_existing_docs.py  check_index_counts.py  check_neo4j_relationships.py  cleanup_all_databases.py  cleanup_all_test_docs.py  cleanup_test_docs.py  comprehensive_db_check.py  comprehensive_verification.py  diagnose_missing_docs.py  download_embedding_model.py  final_comprehensive_test.py  fix_neo4j_duplicates.py  force_cleanup_neo4j.py  force_cleanup_qdrant.py  ingest_complete.py  ingest_dataset.py  ingest_ultra_fast.py  profile_chat_latency.py  quick_start_test.sh  quick_test.py  reindex_with_articles.py  simulate_pipeline.py  test_api_latency.py  test_comprehensive.py  test_contract_review.py  test_data_quality.py  test_extremely_difficult.py  test_groundtruth.py  test_performance.py  test_retrieval.py  test_score_normalization.py  test_with_detailed_timing.py  trace_rrf.py
test contracts/: 1.txt
tests/: __init__.py  conftest.py  test_api_chat.py  test_api_citations.py  test_api_ingest.py  test_api_main.py  test_api_review.py  test_config.py  test_context.py  test_embedding.py  test_generator.py  test_hybrid.py  test_indexer.py  test_ingestion_pipeline.py  test_legal_graph.py  test_middleware.py  test_normalizer.py  test_parser.py  test_planner.py  test_reranker.py  test_review_pipeline.py  test_rrf.py  test_types.py  test_verifier.py
tests/benchmarks/: __init__.py  bench_retrieval.py  bench_review.py
(+71 files in other folders)
