[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vietnamese-legal-ai"
version = "0.1.0"
description = "Vietnamese Legal Contract Review AI System"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Vietnamese Legal AI Team"},
]
keywords = ["legal", "vietnamese", "nlp", "ai", "contract-review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.26.0,<2.1.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.44.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "qdrant-client>=1.12.0,<2.0.0",
    "opensearch-py>=3.1.0,<4.0.0",
    "asyncpg>=0.31.0,<1.0.0",
    "sentence-transformers>=5.4.0,<6.0.0",
    "transformers>=4.45.0,<5.0.0",
    "tensorflow>=2.19.0,<2.20.0",
    "protobuf>=4.25.0,<5.0.0",
    "redis>=6.4.0,<7.0.0",
    "celery>=5.4.0,<6.0.0",
    "groq>=0.37.0,<1.0.0",
    "datasets>=4.5.0,<5.0.0",
    "underthesea>=6.8.0,<7.0.0",
    "prometheus-client>=0.21.0,<1.0.0",
    "prometheus-fastapi-instrumentator>=7.1.0,<8.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "neo4j>=5.25.0,<6.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "ddgs>=9.0.0,<10.0.0",
    "polars>=1.0.0,<2.0.0",
    "pyarrow>=21.0.0,<22.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["packages", "apps"]

[tool.uv]
# Help uv resolve numpy conflicts faster
resolution = "lowest-direct"

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["packages", "apps"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
